--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="w-screen h-screen relative border-box bg-lightGray">
-    <header class="w-[100%] h-[100%] bg-banner bg-no-repeat bg-cover">
+    <header class="w-full h-full bg-banner bg-no-repeat bg-cover">
         <nav class="bg-white/50 shadow fixed top-0 left-0 right-0 z-20">
             <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
                 <div class="relative flex h-20 justify-between">
@@ -114,7 +114,7 @@
 
     <main class="w-screen h-screen">
         <!-- main-1-bg -->
-        <section class="w-[100%] h-[100%] max-h-[400px] md:max-h-[700px] bg-main-1-bg bg-no-repeat bg-cover">
+        <section class="w-full h-full max-h-[400px] md:max-h-[700px] lg:max-h-full bg-main-1-bg bg-no-repeat bg-cover md:bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Grand Canyon</p>
@@ -129,16 +129,16 @@
 
             <!-- main-1-botton + texts-->
             <div
-                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[0%] lg:pt-[5%]">
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-3 md:space-y-4 lg:space-y-6 justify-center items-center gap-x-20 pt-[6%] lg:pt-[5%]">
                 <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Natural Wonder</p>
-                <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Arizona, USA
+                <p class="small-text text-lightGray md:text-2xl lg:text-2xl xl:text-3xl font-krona">in Arizona, USA
                 </p>
             </div>
         </section>
 
         <!-- main-2-bg -->
-        <section class="w-[100%] h-[100%] max-h-[400px] md:max-h-[700px] bg-main-2-bg bg-no-repeat bg-cover">
+        <section class="w-full h-full max-h-[400px] md:max-h-[700px] lg:max-h-full bg-main-2-bg bg-no-repeat bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Pragser</p>
@@ -153,16 +153,16 @@
 
             <!-- main-2-botton + texts-->
             <div
-                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[0%] lg:pt-[5%]">
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-3 md:space-y-4 lg:space-y-6 justify-center items-center gap-x-20 pt-[6%] lg:pt-[5%]">
                 <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">An
                     Emerald Green Lake</p>
-                <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in the Dolomites,
+                <p class="small-text text-lightGray md:text-2xl lg:text-2xl xl:text-3xl font-krona">in the Dolomites,
                     Italy</p>
             </div>
         </section>
 
         <!-- main-3-bg -->
-        <section class="w-[100%] h-[100%] max-h-[400px] md:max-h-[700px] bg-main-3-bg bg-no-repeat bg-cover mb-10">
+        <section class="w-full h-full max-h-[400px] md:max-h-[700px] lg:max-h-full bg-main-3-bg bg-no-repeat bg-cover mb-10">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Mount</p>
@@ -177,10 +177,10 @@
 
             <!-- main-3-botton + texts-->
             <div
-                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[0%] lg:pt-[5%]">
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-3 md:space-y-4 lg:space-y-6 justify-center items-center pt-[6%] lg:pt-[5%]">
                 <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Active Volcano </p>
-                <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Shizuoka,
+                <p class="small-text text-lightGray md:text-2xl lg:text-2xl xl:text-3xl font-krona">in Shizuoka,
                     Japan
                 </p>
             </div>
@@ -188,7 +188,7 @@
 
         <!-- main-4 marquee -->
         <section class="h-[80px] bg-lightGray text-4xl text-rose-300 font-krona">
-            <div class="relative w-screen max-w-full h-[100%] overflow-x-hidden">
+            <div class="relative w-screen max-w-full h-full overflow-x-hidden">
                 <div class="absolute whitespace-nowrap will-change-transform animate-marquee">
                     <div class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
                             class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
@@ -202,9 +202,9 @@
 
         <!-- main-5-bg -->
         <section class="w-screen h-screen">
-            <div class="lg:hidden w-[100%] h-[40%] flex justify-center mb-14 md:mb-16">
-                <div class="w-[75%] h-[100%] md:w-[80%]">
-                    <img src="./src/img/main-5.png" class="rounded-2xl w-[100%] h-[100%] object-cover" alt="">
+            <div class="lg:hidden w-full h-[40%] flex justify-center mb-14 md:mb-16">
+                <div class="w-[75%] h-full md:w-[80%]">
+                    <img src="./src/img/main-5.png" class="rounded-2xl w-full h-full object-cover" alt="">
                 </div>
             </div>
 
