--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 
     <main class="w-screen h-screen">
         <!-- main-1-bg -->
-        <section class="w-full h-full max-h-[400px] md:max-h-[700px] lg:max-h-full bg-main-1-bg bg-no-repeat bg-cover md:bg-cover">
+        <section
+            class="w-full h-full max-h-[400px] md:max-h-[700px] lg:max-h-full bg-main-1-bg bg-no-repeat bg-cover md:bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Grand Canyon</p>
@@ -162,7 +163,8 @@
         </section>
 
         <!-- main-3-bg -->
-        <section class="w-full h-full max-h-[400px] md:max-h-[700px] lg:max-h-full bg-main-3-bg bg-no-repeat bg-cover mb-10">
+        <section
+            class="w-full h-full max-h-[400px] md:max-h-[700px] lg:max-h-full bg-main-3-bg bg-no-repeat bg-cover mb-10">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Mount</p>
@@ -187,7 +189,7 @@
         </section>
 
         <!-- main-4 marquee -->
-        <section class="h-[80px] bg-lightGray text-4xl text-rose-300 font-krona">
+        <section class="h-[80px] lg:h-[120px] bg-lightGray text-4xl lg:text-7xl text-rose-300 font-krona">
             <div class="relative w-screen max-w-full h-full overflow-x-hidden">
                 <div class="absolute whitespace-nowrap will-change-transform animate-marquee">
                     <div class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
@@ -201,8 +203,8 @@
         </section>
 
         <!-- main-5-bg -->
-        <section class="w-screen h-screen">
-            <div class="lg:hidden w-full h-[40%] flex justify-center mb-14 md:mb-16">
+        <section class="w-screen h-[550px] md:mb-48 lg:mb-80">
+            <div class="lg:hidden w-full h-[40%] md:h-[70%] flex justify-center mb-14 md:mb-16">
                 <div class="w-[75%] h-full md:w-[80%]">
                     <img src="./src/img/main-5.png" class="rounded-2xl w-full h-full object-cover" alt="">
                 </div>
@@ -216,27 +218,29 @@
                     <p>Shuttle Services</p>
                     <p>Activities Reservations</p>
                 </div>
-                <div class="h-[6%] flex justify-center">
-                    <img src="./src/img/main-5-icon.png" class="object-cover" alt="">
+                <div class="h-[10%] flex justify-center">
+                    <img src="./src/img/main-5-icon.png" class="h-[70%] object-cover" alt="">
                 </div>
             </div>
 
             <!-- main-5 lg only -->
             <div class="hidden lg:block w-screen h-screen">
                 <div class="grid grid-cols-12 h-full">
-                    <div class="col-span-5 flex justify-center">
-                        <img src="./src/img/main-5.png" class="h-full max-h-[900px] object-cover" alt="">
+                    <div class="col-span-6 w-full h-full ps-32 pb-20">
+                        <div class="bg-main-5 bg-no-repea bg-cover w-full h-full"></div>
                     </div>
-                    <div class="col-span-7 h-full flex flex-col items-center justify-center max-h-[900px]">
+                    <div class="col-span-6 flex flex-col justify-center items-center pb-20">
+                        <div class="main-5-line-1 w-[20%] h-1 bg-rose-300 mb-28"></div>
                         <p class="font-krona text-rose-400 text-3xl lg:text-5xl mb-14">We Provide</p>
-                        <div class="font-krona lg:text-2xl flex flex-col items-center space-y-5 mb-16">
+                        <div class="font-krona text-2xl flex flex-col items-center space-y-4 mb-14">
                             <p>Sightseeing Tours</p>
                             <p>Shuttle Services</p>
                             <p>Activities Reservations</p>
                         </div>
-                        <div class="h-[4%] flex justify-center">
-                            <img src="./src/img/main-5-icon.png" class="object-cover" alt="">
+                        <div class="h-[6%] flex justify-center mb-28">
+                            <img src="./src/img/main-5-icon.png" class="h-[70%] object-cover" alt="">
                         </div>
+                        <div class="main-5-line-1 w-[20%] h-1 bg-rose-300"></div>
                     </div>
                 </div>
             </div>
@@ -244,6 +248,56 @@
 
 
         </section>
+
+        <!-- main-6-bg -->
+        <section class="w-screen h-[550px]">
+            <div class="lg:hidden w-full h-[40%] md:h-[70%] flex justify-center mb-14 md:mb-16">
+                <div class="w-[75%] h-full md:w-[80%]">
+                    <img src="./src/img/main-6.png" class="rounded-2xl w-full h-full object-cover" alt="">
+                </div>
+            </div>
+
+            <!-- main-6 middle texts -->
+            <div class="lg:hidden h-[50%] flex flex-col items-center">
+                <p class="font-krona text-rose-400 text-3xl lg:text-5xl mb-8">You Can Find</p>
+                <div class="font-krona lg:text-3xl flex flex-col items-center space-y-2 mb-10">
+                    <p>Ecotourisms</p>
+                    <p>Culture Experiences</p>
+                    <p>Outdoor Sports</p>
+                </div>
+                <div class="h-[10%] flex justify-center">
+                    <img src="./src/img/main-5-icon.png" class="h-[70%] object-cover" alt="">
+                </div>
+            </div>
+
+            <!-- main-6 lg only -->
+            <div class="hidden lg:block w-screen h-screen">
+                <div class="grid grid-cols-12 h-full">
+                    <div class="col-span-6 w-full h-full ps-32 pb-20">
+                        <div class="bg-main-6 bg-no-repea bg-cover w-full h-full"></div>
+                    </div>
+                    <div class="col-span-6 flex flex-col justify-center items-center pb-20">
+                        <div class="main-5-line-1 w-[20%] h-1 bg-rose-300 mb-28"></div>
+                        <p class="font-krona text-rose-400 text-3xl lg:text-5xl mb-14">You Can Find</p>
+                        <div class="font-krona text-2xl flex flex-col items-center space-y-4 mb-14">
+                            <p>Ecotourisms</p>
+                            <p>Culture Experiences</p>
+                            <p>Outdoor Sports</p>
+                        </div>
+                        <div class="h-[6%] flex justify-center mb-28">
+                            <img src="./src/img/main-5-icon.png" class="h-[70%] object-cover" alt="">
+                        </div>
+                        <div class="main-5-line-1 w-[20%] h-1 bg-rose-300"></div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </section>
+
+
+
     </main>
 
 
