--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 
-<body class="w-screen h-screen relative border-box bg-lightGray">
+<body class="w-screen h-screen relative border-box bg-lightGray font-krona">
     <header class="w-full h-full bg-banner bg-no-repeat bg-cover">
         <nav class="bg-white/50 shadow fixed top-0 left-0 right-0 z-20">
-            <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-                <div class="relative flex h-20 justify-between">
+            <div class="mx-auto max-w-6xl px-2 sm:px-6 lg:px-8">
+                <div class="relative flex h-16 lg:h-20 justify-between">
                     <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
 
                         <!-- ham dropdown menu button -->
                         <button type="button"
-                            class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-40 hover:bg-lightGray hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-subPurple active:opacity-60"
+                            class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-40 hover:bg-lightGray hover:text-subPurple focus:outline-none focus:ring-2 focus:ring-inset focus:ring-subPurple focus:bg-lightGray active:opacity-60"
                             aria-controls="mobile-menu" aria-expanded="false">
 
                             <svg class="block size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -33,7 +33,7 @@
                         <div class="flex shrink-0 items-center">
                             <a href="#"><img class="h-7 w-auto" src="./src/img/logo.png" alt="Company Logo"></a>
                         </div>
-                        <div class="hidden sm:ml-6 sm:flex sm:space-x-3 font-krona">
+                        <div class="hidden sm:ml-6 sm:flex sm:space-x-3">
 
                             <div class="nav-btn flex justify-center items-center">
                                 <a href="#"
@@ -52,7 +52,7 @@
                     </div>
 
                     <!-- user icon -->
-                    <div class="absolute right-12 top-5">
+                    <div class="absolute right-12 top-3 lg:top-5">
                         <button type="button"
                             class="w-10 h-10 rounded-full p-2 text-gray-800 hover:text-subPurple hover:bg-lightGray active:opacity-60 flex justify-center items-center">
                             <i class="fa-solid fa-user"></i>
@@ -60,7 +60,7 @@
                     </div>
 
                     <!-- cart icon -->
-                    <div class="absolute right-0 top-5">
+                    <div class="absolute right-0 top-3 lg:top-5">
                         <button type="button"
                             class="w-10 h-10 rounded-full p-2 text-gray-800 hover:text-subPurple hover:bg-lightGray active:opacity-60  flex justify-center items-center">
                             <i class="fa-solid fa-cart-shopping"></i>
@@ -71,7 +71,7 @@
 
             <!-- Mobile menu, show/hide based on menu state. -->
             <!-- <div class="sm:hidden" id="mobile-menu">
-                <div class="font-krona space-y-1 pb-4 pt-2">
+                <div class= space-y-1 pb-4 pt-2">
                     <a href="#"
                         class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Home</a>
                     <a href="#"
@@ -94,16 +94,16 @@
 
         <!-- banner-middle + star icon -->
         <div class="w-screen h-[15%] flex justify-center items-center ">
-            <img src="./src/img/banner-icon.png" class="h-[60%] object-cover" alt="">
+            <img src="./src/img/banner-icon.png" class="h-[60%] max-h-[100px] object-cover" alt="">
         </div>
 
         <!-- banner-botton + texts -->
         <div class="w-screen h-[15%] mx-auto xl:max-w-7xl flex justify-center items-center gap-x-20 lg:pt-[5%]">
-            <p class="small-text text-lightGray hidden lg:block lg:text-2xl font-krona">{{&nbsp;Have
+            <p class="small-text text-lightGray hidden lg:block lg:text-2xl">{{&nbsp;Have
                 Fun&nbsp;}}</p>
-            <p class="small-text text-lightGray text-2xl lg:text-2xl font-krona">{{&nbsp;Have Fun&nbsp;}}
+            <p class="small-text text-lightGray text-2xl lg:text-2xl">{{&nbsp;Have Fun&nbsp;}}
             </p>
-            <p class="small-text text-lightGray hidden lg:block lg:text-2xl font-krona">{{&nbsp;Have
+            <p class="small-text text-lightGray hidden lg:block lg:text-2xl">{{&nbsp;Have
                 Fun&nbsp;}}</p>
         </div>
 
@@ -113,78 +113,75 @@
         </div>
     </header>
 
-    <main class="w-screen h-screen">
+    <main class="w-screen min-h-screen">
         <!-- main-1-bg -->
-        <section
-            class="w-full h-full max-h-[400px] bg-main-1-bg bg-no-repeat bg-cover md:max-h-[700px] lg:max-h-full md:bg-cover">
+        <section class="w-full h-[400px] bg-main-1-bg bg-no-repeat bg-cover md:h-[700px] lg:h-screen md:bg-cover">
             <div class="w-screen h-[45%] text-mainYellow flex justify-center items-center pt-[15%]">
                 <div
-                    class="text-3xl font-krona flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
-                    <p>Vík</p>
+                    class="text-3xl flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
+                    <p>Klausturholar</p>
                 </div>
             </div>
-
+            `
             <!-- main-1-middle star icon -->
             <div class="w-screen h-[15%] flex justify-center items-center opacity-80">
-                <img src="./src/img/banner-icon.png" class="h-[60%] object-cover" alt="">
+                <img src="./src/img/banner-icon.png" class="h-[60%] max-h-[100px] object-cover" alt="">
             </div>
 
             <!-- main-1-botton + texts-->
             <div
-                class="w-screen h-[15%] text-sm font-krona text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
-                <p>A Charming Village </p>
-                <p>for Northern Lights Viewing</p>
+                class="w-screen h-[15%] text-sm text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
+                <p>Kerid Crater Lake, a natural wonder</p>
+                <p>for trail Exploration</p>
             </div>
         </section>
 
         <!-- main-2-bg -->
-        <section
-            class="w-full h-full max-h-[400px] bg-main-2-bg bg-no-repeat bg-cover md:max-h-[700px] lg:max-h-full md:bg-cover">
+        <section class="w-full h-[400px] bg-main-2-bg bg-no-repeat bg-cover md:h-[700px] lg:h-screen md:bg-cover">
             <div class="w-screen h-[45%] text-mainYellow flex justify-center items-center pt-[15%]">
                 <div
-                    class="text-3xl font-krona flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
+                    class="text-3xl flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
                     <p>Vestrahorn</p>
                 </div>
             </div>
 
             <!-- main-2-middle star icon -->
             <div class="w-screen h-[15%] flex justify-center items-center opacity-80">
-                <img src="./src/img/banner-icon.png" class="h-[60%] object-cover" alt="">
+                <img src="./src/img/banner-icon.png" class="h-[60%] max-h-[100px] object-cover" alt="">
             </div>
 
             <!-- main-2-botton + texts-->
             <div
-                class="w-screen h-[15%] text-sm font-krona text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
+                class="w-screen h-[15%] text-sm text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
                 <p>A Majestic Mountain</p>
                 <p>for photography and hiking</p>
             </div>
         </section>
 
         <!-- main-3-bg -->
-        <section
-            class="w-full h-full max-h-[400px] bg-main-3-bg bg-no-repeat bg-cover md:max-h-[700px] lg:max-h-full md:bg-cover">
+        <section class="w-full h-[400px] bg-main-3-bg bg-no-repeat bg-cover md:h-[700px] lg:h-screen md:bg-cover">
             <div class="w-screen h-[45%] text-mainYellow flex justify-center items-center pt-[15%]">
                 <div
-                    class="text-3xl font-krona flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
-                    <p>Klausturholar</p>
+                    class="text-3xl flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
+                    <p>Vík</p>
                 </div>
             </div>
 
             <!-- main-3-middle star icon -->
             <div class="w-screen h-[15%] flex justify-center items-center opacity-80">
-                <img src="./src/img/banner-icon.png" class="h-[60%] object-cover" alt="">
+                <img src="./src/img/banner-icon.png" class="h-[60%] max-h-[100px] object-cover" alt="">
             </div>
 
             <!-- main-3-botton + texts-->
             <div
-                class="w-screen h-[15%] text-sm font-krona text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
-                <p>Kerid Crater Lake, a natural wonder</p>
-                <p>for trail Exploration</p>
+                class="w-screen h-[15%] text-sm text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
+                <p>A Charming Village</p>
+                <p>for Northern Lights Viewing</p>
             </div>
         </section>
 
         <!-- main-4 marquee -->
-        <section class="h-[140px] text-subPurple font-krona text-4xl md:text-5xl md:h-[180px] lg:h-[220px] lg:text-7xl">
+        <section class="h-[140px] text-subPurple text-4xl md:text-5xl md:h-[180px] lg:h-[220px] lg:text-7xl">
             <div class="relative w-screen max-w-full h-full overflow-x-hidden flex items-center">
                 <div class="absolute whitespace-nowrap will-change-transform animate-marquee">
                     <div class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
@@ -207,10 +204,10 @@
 
             <!-- main-5 middle texts -->
             <div class="lg:hidden h-[55%] flex flex-col items-center">
-                <p class="font-krona text-subPurple text-2xl md:text-4xl mb-6 md:mb-8">We Provide</p>
-                <div class="font-krona text-sm md:text-xl flex flex-col items-center space-y-2 mb-10">
+                <p class="text-subPurple text-2xl md:text-4xl mb-6 md:mb-8">We Provide</p>
+                <div class="text-sm md:text-xl flex flex-col items-center space-y-2 mb-10">
                     <p>Glacier Hiking</p>
-                    <p>Observing Volcanic Landscapes</p>
+                    <p>Volcanic Landscapes</p>
                     <p>Ice Cave Exploration</p>
                 </div>
                 <div class="h-[10%] flex justify-center">
@@ -226,14 +223,14 @@
                     </div>
                     <div class="col-span-6 flex flex-col justify-center items-center pb-20">
                         <div class="main-5-line-1 w-[20%] h-1 bg-subPurple mb-28 opacity-50"></div>
-                        <p class="font-krona text-subPurple text-3xl lg:text-5xl mb-14">We Provide</p>
-                        <div class="font-krona text-2xl flex flex-col items-center space-y-4 mb-14">
+                        <p class="text-subPurple text-3xl lg:text-5xl mb-14">We Provide</p>
+                        <div class="text-2xl flex flex-col items-center space-y-4 mb-14">
                             <p>Sightseeing Tours</p>
                             <p>Shuttle Services</p>
                             <p>Activities Reservations</p>
                         </div>
                         <div class="h-[6%] flex justify-center mb-28">
-                            <img src="./src/img/main-5-icon.png" class="h-[70%] object-cover" alt="">
+                            <img src="./src/img/main-5-icon.png" class="h-[70%] max-h-[100px] object-cover" alt="">
                         </div>
                         <div class="main-5-line-1 w-[20%] h-1 bg-subPurple opacity-50"></div>
                     </div>
@@ -251,14 +248,14 @@
 
             <!-- main-6 middle texts -->
             <div class="lg:hidden h-[55%] flex flex-col items-center">
-                <p class="font-krona text-subPurple text-2xl md:text-4xl mb-6 md:mb-8">You Can Find</p>
-                <div class="font-krona text-sm md:text-xl flex flex-col items-center space-y-2 mb-10">
+                <p class="text-subPurple text-2xl md:text-4xl mb-6 md:mb-8">You Can Find</p>
+                <div class="text-sm md:text-xl flex flex-col items-center space-y-2 mb-10">
                     <p>Ecotourism</p>
                     <p>Culture Experience</p>
                     <p>Outdoor Sports</p>
                 </div>
                 <div class="h-[10%] flex justify-center">
-                    <img src="./src/img/main-5-icon.png" class="h-[70%] object-cover" alt="">
+                    <img src="./src/img/main-5-icon.png" class="h-[70%] max-h-[100px] object-cover" alt="">
                 </div>
             </div>
 
@@ -270,14 +267,14 @@
                     </div>
                     <div class="col-span-6 flex flex-col justify-center items-center pb-20">
                         <div class="main-5-line-1 w-[20%] h-1 bg-subPurple mb-28 opacity-50"></div>
-                        <p class="font-krona text-subPurple text-3xl lg:text-5xl mb-14">You Can Find</p>
-                        <div class="font-krona text-2xl flex flex-col items-center space-y-4 mb-14">
+                        <p class="text-subPurple text-3xl lg:text-5xl mb-14">You Can Find</p>
+                        <div class="text-2xl flex flex-col items-center space-y-4 mb-14">
                             <p>Ecotourism</p>
                             <p>Culture Experience</p>
                             <p>Outdoor Sports</p>
                         </div>
                         <div class="h-[6%] flex justify-center mb-28">
-                            <img src="./src/img/main-5-icon.png" class="h-[70%] object-cover" alt="">
+                            <img src="./src/img/main-5-icon.png" class="h-[70%] max-h-[100px] object-cover" alt="">
                         </div>
                         <div class="main-5-line-1 w-[20%] h-1 bg-subPurple opacity-50"></div>
                     </div>
@@ -287,13 +284,13 @@
 
         <!-- main-7-bg -->
         <section
-            class="w-full h-full relative max-h-[400px] bg-main-7-bg bg-no-repeat bg-cover flex justify-center items-center md:max-h-[600px] lg:max-h-full">
+            class="w-full h-screen relative max-h-[400px] lg:h-[900px] bg-main-7-bg bg-no-repeat bg-cover flex justify-center items-center md:max-h-[600px] lg:max-h-full">
             <div class="w-[70%] md:w-[60%] h-[30%] lg:h-[35%] flex justify-center">
                 <video src="./src/video/main-video.mp4" autoplay loop muted
                     class="w-full h-full rounded-xl object-cover"></video>
             </div>
             <div
-                class="absolute top-20 md:top-28 lg:top-36 text-mainYellow font-krona text-3xl md:text-6xl lg:text-8xl">
+                class="absolute top-20 md:top-28 lg:top-36 text-mainYellow text-3xl md:text-6xl lg:text-8xl">
                 <p>Start a Journey</p>
             </div>
             <!-- 置中 button => top-[calc(50%-27px)] -->
@@ -304,8 +301,23 @@
         </section>
     </main>
 
-
-    <footer></footer>
+    <footer class="bg-gray-400 text-lightGray">
+        <section class="w-screen h-[200px] lg:h-[300px]">
+            <div class="grid grid-row-12 p-8">
+                <div class="row-span-7 flex flex-col justify-center items-center space-y-4 mb-6">
+                    <img src="./src/img/logo.png" class="max-w-[40px] max-h-[40px]" alt="">
+                    <p class="text-sm">Explore &copy;</p>
+                </div>
+                <div class="row-span-5 flex flex-row justify-center space-x-5 text-md">
+                    <p>Home</p>
+                    <p>|</p>
+                    <p>Shop</p> 
+                    <p>|</p>
+                    <p>About us</p>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
